--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,9 +1,10 @@
 /***** COLORS *****/
-@theme-color: #6B9AD0;
+@theme-color: #6b9ad0;
 @theme-shadow-color: #c6defa;
 @font-color: #69747c;
-@decor-color: #A6AAAD;
+@decor-color: #a6aaad;
 @decor-dark: #6492B6;
+@mobile-menu-color: #e1effc;
 @color-facebook: #3b5998;
 @color-gplus: #dd4b39;
 @color-twitter: #00aced;
