--- a/styles/blocks/note/note.less
+++ b/styles/blocks/note/note.less
@@ -10,16 +10,16 @@
     margin-bottom: 0;
 
     @media @tablet {
-      display: inline-block;
-      margin: 0 54px;
-      width: ~"calc(100% - 108px)";
+      display: block;
+      //margin: 0 54px;
+      //width: ~"calc(100% - 108px)";
       height: 0;
       overflow: hidden;
       transition: height .5s ease-in-out;
       background: #fff;
 
       &-exclamation {
-        margin-top: -16px;
+        //margin-top: -16px;
       }
     }
   }
@@ -29,11 +29,11 @@
 
     @media @tablet {
       display: block;
-      width: 56px;
-      height: 56px;
+      width: 54px;
+      height: 54px;
       background: lighten(@theme-color, 10%);
       color: @theme-color;
-      line-height: 56px;
+      line-height: 54px;
       font-family: @header-font;
       font-weight: bold;
       font-size: 2 * @baseFontSize;
@@ -45,7 +45,7 @@
         z-index: 2;
         display: block;
         position: absolute;
-        top: 56px;
+        top: 54px;
         left: ~"calc(50% - 10px)";
         width: 0;
         height: 0;
@@ -60,7 +60,7 @@
         z-index: 2;
         display: block;
         position: absolute;
-        top: 60px;
+        top: 58px;
         left: ~"calc(50% - 10px)";
         width: 0;
         height: 0;
@@ -118,7 +118,7 @@
       &--exclamation {
         position: absolute;
         top: 0;
-        left: 35px;
+        left: 38px;
       }
     }
   }
@@ -137,18 +137,20 @@
     //transition: height .5s;
 
     @media @tablet {
-      display: none;
+      //display: none;
       margin: 0;
       border: none;
-      height: 56px;
-      line-height: 56px;
+      height: 54px;
+      line-height: 54px;
       position: absolute;
       padding: 0 20px;
       &--nav {
         //display: inline-block;
         background: lighten(@theme-shadow-color, 5%);
         opacity: 0;
-        transition: opacity 1s;
+        transition: all 1s;
+        overflow: hidden;
+        height: 0;
       }
     }
 
@@ -177,9 +179,13 @@
       }
 
       @media @tablet {
-        top: 84px;
-        left: -24px;
+        top: 83px;
+        left: -25px;
         transform: rotate(-90deg);
+      }
+
+      @media @mobile {
+        top: 62px;
       }
     }
 
@@ -190,9 +196,13 @@
       }
 
       @media @tablet {
-        top: 152px;
-        right: -92px;
+        top: 151px;
+        right: -94px;
         transform: rotate(90deg);
+      }
+
+      @media @mobile {
+        top: 130px;
       }
     }
   }
@@ -206,8 +216,13 @@
       @media @tablet {
         display: block;
         background: #fff;
-        width: ~"calc(100% - 108px)";
-        padding: 20px 54px 0;
+        //width: ~"calc(100% - 108px)";
+        padding: 20px 70px 0;
+      }
+
+      @media @mobile {
+        background: @mobile-menu-color;
+        padding: 20px 3% 0;
       }
     }
   }
