--- a/styles/blocks/info/info.less
+++ b/styles/blocks/info/info.less
@@ -7,7 +7,7 @@
     overflow: hidden;
     margin: 4px 0 0;
     transition: height .5s ease-in-out;
-    height: 0;
+    height: 500px;//0;
     //display: flex;
     //flex-direction: row;
     //justify-content: center;
