--- a/styles/blocks/logo/logo.less
+++ b/styles/blocks/logo/logo.less
@@ -1,15 +1,13 @@
 @import "../../variables.less";
 
 .logo {
-  //height: 87px;
-  //line-height: 87px;
   padding: 17px 0 14px;
   width: 375px;
   display: block;
   text-align: center;
   text-transform: uppercase;
   font-size: 2.2 * @baseFontSize;
-  font-family: "Trend-Sans-One";
+  font-family: "Trend-Sans-One", Arial, Tahoma, sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: @theme-color;
@@ -27,7 +25,6 @@
     width: 3.7rem;
     height: 3.7rem;
     vertical-align: middle;
-    //margin: 0 .2rem;
     border-radius: 50%;
     background: @theme-color;
     fill: #fff;
