--- a/styles/variables.less
+++ b/styles/variables.less
@@ -22,3 +22,6 @@
 
 // Mode: Mobile
 @mobile: ~"screen and (max-width: 650px)";
+
+// Internet Explorer
+@ie: ~"screen and (-ms-high-contrast: active), (-ms-high-contrast: none)";
