--- a/styles/blocks/article/article.less
+++ b/styles/blocks/article/article.less
@@ -7,7 +7,7 @@
 
   @media @tablet {
     box-sizing: border-box;
-    width: 100%;
+    width: 100vw;
     position: relative;
     padding: 0 8.5%;
   }
@@ -35,7 +35,7 @@
     font-family: @header-font;
     font-size: 1.3 * @baseFontSize;
     font-weight: bold;
-    
+
     @media @mobile {
       text-align: center;
       background: #F4F5F7;
