--- a/styles/blocks/info/info.less
+++ b/styles/blocks/info/info.less
@@ -3,14 +3,15 @@
 .info {
   display: flex;
   flex-direction: column;
+
   &__notes-wrapper {
     overflow: hidden;
     margin: 4px 0 0;
     transition: height .5s ease-in-out;
-    height: 500px;//0;
-    //display: flex;
-    //flex-direction: row;
-    //justify-content: center;
-    //transition: all .5s;
+    height: 0;
+
+    @media @mobile {
+      margin: 0;
+    }
   }
 }
