--- a/styles/blocks/social/social.less
+++ b/styles/blocks/social/social.less
@@ -1,7 +1,6 @@
 @import "../../variables.less";
 
 .social {
-
   @media @tablet {
     text-align: right;
   }
@@ -16,7 +15,7 @@
 
     @media @tablet {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 7px;
     }
 
     @media @mobile {
@@ -26,7 +25,7 @@
 
   &__icon {
     width: 1.3rem;
-    height: 100%; // 1.4rem;
+    height: 100%;
     vertical-align: -15%;
     fill: #fff;
   }
@@ -34,17 +33,14 @@
   &__link {
     display: inline-block;
     padding: 0 10px 0 0;
-    //width: 3rem;
     height: 1.5rem;
     text-decoration: none;
     border-radius: 3px;
     background: @decor-color;
     color: #fff;
-    //opacity: .5;
 
     &:hover {
       box-shadow: 0 0 1px @font-color;
-      //opacity: 1;
     }
 
     &--facebook:hover {
@@ -68,8 +64,6 @@
     }
 
     @media @tablet {
-      //opacity: 1;
-
       &--facebook {
         background: @color-facebook;
       }
